--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,8 @@ services:
   db:
     image: postgres:15
     restart: always
-    environment:
-      POSTGRES_USER: <username>
-      POSTGRES_PASSWORD: <password>
-      POSTGRES_DB: credentials
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
@@ -16,12 +14,8 @@ services:
     restart: always
     depends_on:
       - db
-    environment:
-      DB_HOST: db
-      DB_USER: <username>
-      DB_PASSWORD: <password>
-      DB_NAME: credentials
-      DB_PORT: 5432
+    env_file:
+      - .env
     ports:
       - "3000:3000"
 
